Fixed spelling errors

--- a/minecraft_project.ipynb
+++ b/minecraft_project.ipynb
@@ -41,7 +41,7 @@
    "id": "63815ebb-0a71-4ce3-a55a-48bca5ae4e37",
    "metadata": {},
    "source": [
-    "# Load the d"
+    "# Load the data"
    ]
   },
   {
