Add in new To-Do

--- a/minecraft_project.ipynb
+++ b/minecraft_project.ipynb
@@ -429,12 +429,13 @@
    "source": [
     "# Data Wrangling\n",
     "\n",
-    "<ins>To-Do:</ins>\n",
+    "<ins>To-Do:</ins> (**Tidy Data**)\n",
     "- [x] Split `start_time` and `end_time` with Dates and Time separately\n",
     "- [x] Convert each Data into Day of the Week (with type `date`)\n",
     "- [x] Then use `weekday()` function to convert it\n",
     "\n",
-    "[Code Date Citation](https://stackoverflow.com/questions/59998445/how-to-create-a-column-in-a-data-frame-that-shows-the-days-of-the-week-from-exis)"
+    "[Code Date Citation #1](https://stackoverflow.com/questions/59998445/how-to-create-a-column-in-a-data-frame-that-shows-the-days-of-the-week-from-exis) \\\n",
+    "[Code Date Citation #2](https://www.geeksforgeeks.org/convert-date-to-day-of-week-in-r/)"
    ]
   },
   {
@@ -741,8 +742,8 @@
     "           end_date = as.Date(end_date))\n",
     "\n",
     "# Convert each date into Day of the Week\n",
-    "# [Date Citation](https://stackoverflow.com/questions/59998445/how-to-create-a-column-in-a-data-frame-that-shows-the-days-of-the-week-from-exis)\n",
-    "# abr = TRUE (would turn it into Thur.); ord = ordered factor\n",
+    "# abr = TRUE (would turn it into Thur.)\n",
+    "# ord = ordered factor\n",
     "mc_final <- mc_split |>\n",
     "    mutate(start_day = wday(start_date, label = TRUE, abbr = FALSE),\n",
     "           end_day = wday(end_date, label = TRUE, abbr = FALSE))\n",
@@ -750,9 +751,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "94bad234-9801-4462-8195-1d2c84fc787a",
+   "metadata": {},
+   "source": [
+    "<ins>To Do</ins> (**Do Calculations**)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "10c2ad98-e1f6-4489-bdd3-e6d210eb343e",
+   "id": "d0641868-36fd-41e2-93cd-70c52ea9f8fc",
    "metadata": {},
    "outputs": [],
    "source": []
