Remove all data files that are manually uploaded. Switched to URL versions instead.

--- a/minecraft_project.ipynb
+++ b/minecraft_project.ipynb
@@ -41,9 +41,7 @@
    ],
    "source": [
     "# Load the libraries\n",
-    "library(tidyverse)\n",
-    "library(lubridate)\n",
-    "library(dplyr)"
+    "library(tidyverse)"
    ]
   },
   {
@@ -56,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "id": "de8bcf4f-6fba-4212-92d7-73635e7a5006",
    "metadata": {},
    "outputs": [
@@ -418,7 +416,12 @@
     }
    ],
    "source": [
-    "mc_sessions <- read_csv(\"data/sessions.csv\")\n",
+    "# Constants\n",
+    "url_players <- \"https://drive.google.com/uc?export=download&id=1Mw9vW0hjTJwRWx0bDXiSpYsO3gKogaPz\"\n",
+    "url_sessions <- \"https://drive.google.com/uc?export=download&id=14O91N5OlVkvdGxXNJUj5jIsV5RexhzbB\"\n",
+    "\n",
+    "# Reading in the data via URL\n",
+    "mc_sessions <- read_csv(url_sessions)\n",
     "mc_sessions"
    ]
   },
@@ -440,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "4a07b534-256b-41a8-956b-f78c7dc2887e",
    "metadata": {},
    "outputs": [
