Added To Do- Convert times from chr to dbl (minutes from midnight)

--- a/minecraft_project.ipynb
+++ b/minecraft_project.ipynb
@@ -758,7 +758,8 @@
    "id": "94bad234-9801-4462-8195-1d2c84fc787a",
    "metadata": {},
    "source": [
-    "<ins>To Do</ins> (**Do Calculations**)"
+    "<ins>To Do</ins> (**Do Calculations**)\n",
+    "- [ ] Convert start_time and end_time from chr to dbl (minutes from midnight)"
    ]
   },
   {
