Fixed the variables tables and add in Methods and Results section

--- a/minecraft_project.ipynb
+++ b/minecraft_project.ipynb
@@ -14,58 +14,78 @@
    "metadata": {},
    "source": [
     "## <ins>Introduction</ins>\n",
-    "Due to COVID-19 and the strict lockdown policies imposed in many countries, a huge surge of gamers was observed in 2020, with the numbers racing up to 2.7 billion. Many studies have been conducted on how gamers play video games and how video games can affect an individual’s well-being, cognitive performance and brain activity ([Johannes et al., 2021](https://doi.org/10.1098/rsos.202049); [Jordan & Dhamala, 2022](https://doi.org/10.1016/j.ynirp.2022.100112)).\n",
+    "Due to COVID-19 and the strict lockdown policies imposed in many countries, a huge surge of gamers was observed in 2020, with the numbers racing up to 2.7 billion. Given this, many studies have been conducted on how gamers play video games and how video games can affect an individual’s well-being, cognitive performance and brain activity ([Johannes et al., 2021](https://doi.org/10.1098/rsos.202049); [Jordan & Dhamala, 2022](https://doi.org/10.1016/j.ynirp.2022.100112)).\n",
     "\n",
     "Despite the global increase in the number of gamers and the potential advantages associated with video gaming, numerous studies have been hindered by limited sample sizes ([Alonso-Fernández et al., 2019](https://doi.org/10.1016/j.compedu.2019.103612); [Petri & Gresse, 2017](https://doi.org/10.1016/j.compedu.2017.01.004)) and inaccuracies stemming from reliance on self-reported engagement metrics ([Johannes et al., 2021](https://doi.org/10.1098/rsos.202049)). Addressing these critical issues, a team of computer scientists from the University of British Columbia, known as PLAICraft, has developed a study that automates data collection during players' gaming sessions in Minecraft. This approach alleviates concerns related to self-evaluation. Furthermore, PLAICraft aims to identify specific player types that are likely to generate a greater volume of data based on previous datasets, which will serve as the central focus of this paper. Specifically, this paper will investigate what gender is likely to contribute more data based on the K-NN classification model based on the Age and Total Playtime of the players.\n",
     "\n",
-    "The dataset being used in this study, derived from `players.csv` (courtesy of PLAICraft team; [here](https://drive.google.com/uc?export=download&id=1Mw9vW0hjTJwRWx0bDXiSpYsO3gKogaPz)), contains a total of 196 observations and nine variables. These variables include:\n",
-    "\n",
-    "**Name and Type of Variables**\n",
-    "* There are nine variables that are of mixed data types:\n",
-    "  1.  Experience (`chr`)\n",
-    "  2.  Subscribe (`lgl`)\n",
-    "  3.  Hashed Email (`chr`)\n",
-    "  4.  Played Hours (`dbl`)\n",
-    "  5.  Name (`chr`)\n",
-    "  6.  Gender (`chr`)\n",
-    "  7.  Age (`dbl`)\n",
-    "  8.  Individual ID (`chr`)\n",
-    "  9.  Organization Name (`chr`)\n",
-    "\n",
-    "**Variable meanings:**\n",
-    "* Meaning includes:\n",
-    "    1. Experience → self-evaluated experience with Minecraft\n",
-    "    2. Subscribe → declarations to receive email updates\n",
-    "    3. Hashed Email → encrypted email via Hash\n",
-    "    4. Played Hours → total played hours\n",
-    "    5. Name → a fake name used in-game\n",
-    "    6. Gender → gender of players\n",
-    "    7. Age → age of players\n",
-    "    8. Individual ID → the player’s ID in-game\n",
-    "    9. Organization Name → the name of the players’ school/organization"
+    "The dataset being used in this study, derived from `players.csv` (courtesy of PLAICraft team; [here](https://drive.google.com/uc?export=download&id=1Mw9vW0hjTJwRWx0bDXiSpYsO3gKogaPz)), contains a total of 196 observations and nine variables. These variables are listed and described in the table below:"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "04555a4d-033c-45a5-955c-28a870faadf8",
+   "id": "780cb566-f8fe-401a-af0e-489c2fd3d77f",
    "metadata": {},
    "source": [
-    "**Table 1: The Name of the Variables, its Data Type and Meaning**\n",
-    "<div style=\"float: left;\">\n",
-    "    \n",
-    "| Name              | Data Type | Meaning                                      |\n",
-    "| :---------------- | :-------: | :------------------------------------------- |\n",
-    "| Experience        |   `chr`   | self-evaluated experience with Minecraft     |\n",
-    "| Subscribe         |   `lgl`   | declarations to receive email updates        |\n",
-    "| Hashed Email      |   `chr`   | encrypted email via Hash                     |\n",
-    "| Played Hours      |   `dbl`   | total played hours                           |\n",
-    "| Name              |   `chr`   | a fake name used in-game                     |\n",
-    "| Gender            |   `chr`   | gender of players                            |\n",
-    "| Age               |   `dbl`   | age of players                               |\n",
-    "| Individual ID     |   `chr`   | the player’s ID in-game                      |\n",
-    "| Organization Name |   `chr`   | the name of the players’ school/organization |\n",
-    "\n",
-    "</div>"
+    "<!DOCTYPE html>\n",
+    "<html>\n",
+    "<body>\n",
+    "    <table style=\"border-collapse: collapse; width: 40%; margin: auto auto; table-layout: auto; border: 0px solid black;\">\n",
+    "        <caption style=\"font-size: 1.1em; font-weight: bold; margin-bottom: 5px; text-align: center;\">\n",
+    "            Table 1: The Name of the Variables, Its Data Type and Meaning\n",
+    "        </caption>\n",
+    "        <tr>\n",
+    "            <th style=\"border: 0px solid black; text-align: center; padding: 10px;\">Name</th>\n",
+    "            <th style=\"border: 0px solid black; text-align: center; padding: 10px;\">Data Type</th>\n",
+    "            <th style=\"border: 0px solid black; text-align: center; padding: 10px;\">Meaning</th>\n",
+    "        </tr>\n",
+    "        <tr style=\"border: 0px solid black;\">\n",
+    "            <td style=\"border: 0px solid black; text-align: left; padding: 8px;\">Experience</td>\n",
+    "            <td style=\"border: 0px solid black; text-align: center; padding: 8px;\">chr</td>\n",
+    "            <td style=\"border: 0px solid black; text-align: left; padding: 8px;\">Self-evaluated experience with Minecraft</td>\n",
+    "        </tr>\n",
+    "        <tr style=\"border: 0px solid black;\">\n",
+    "            <td style=\"border: 0px solid black; text-align: left; padding: 8px;\">Subscribe</td>\n",
+    "            <td style=\"border: 0px solid black; text-align: center; padding: 8px;\">lgl</td>\n",
+    "            <td style=\"border: 0px solid black; text-align: left; padding: 8px;\">Declarations to receive email updates</td>\n",
+    "        </tr>\n",
+    "        <tr style=\"border: 0px solid black;\">\n",
+    "            <td style=\"border: 0px solid black; text-align: left; padding: 8px;\">Hashed Email</td>\n",
+    "            <td style=\"border: 0px solid black; text-align: center; padding: 8px;\">chr</td>\n",
+    "            <td style=\"border: 0px solid black; text-align: left; padding: 8px;\">Encrypted email via Hash</td>\n",
+    "        </tr>\n",
+    "        <tr style=\"border: 0px solid black;\">\n",
+    "            <td style=\"border: 0px solid black; text-align: left; padding: 8px;\">Played Hours</td>\n",
+    "            <td style=\"border: 0px solid black; text-align: center; padding: 8px;\">dbl</td>\n",
+    "            <td style=\"border: 0px solid black; text-align: left; padding: 8px;\">Total played hours</td>\n",
+    "        </tr>\n",
+    "        <tr style=\"border: 0px solid black;\">\n",
+    "            <td style=\"border: 0px solid black; text-align: left; padding: 8px;\">Name</td>\n",
+    "            <td style=\"border: 0px solid black; text-align: center; padding: 8px;\">chr</td>\n",
+    "            <td style=\"border: 0px solid black; text-align: left; padding: 8px;\">A fake name used in-game</td>\n",
+    "        </tr>\n",
+    "        <tr style=\"border: 0px solid black;\">\n",
+    "            <td style=\"border: 0px solid black; text-align: left; padding: 8px;\">Gender</td>\n",
+    "            <td style=\"border: 0px solid black; text-align: center; padding: 8px;\">chr</td>\n",
+    "            <td style=\"border: 0px solid black; text-align: left; padding: 8px;\">Gender of players</td>\n",
+    "        </tr>\n",
+    "        <tr style=\"border: 0px solid black;\">\n",
+    "            <td style=\"border: 0px solid black; text-align: left; padding: 8px;\">Age</td>\n",
+    "            <td style=\"border: 0px solid black; text-align: center; padding: 8px;\">dbl</td>\n",
+    "            <td style=\"border: 0px solid black; text-align: left; padding: 8px;\">Age of players</td>\n",
+    "        </tr>\n",
+    "        <tr style=\"border: 0px solid black;\">\n",
+    "            <td style=\"border: 0px solid black; text-align: left; padding: 8px;\">Individual ID</td>\n",
+    "            <td style=\"border: 0px solid black; text-align: center; padding: 8px;\">chr</td>\n",
+    "            <td style=\"border: 0px solid black; text-align: left; padding: 8px;\">The player's ID in-game</td>\n",
+    "        </tr>\n",
+    "        <tr style=\"border: 0px solid black;\">\n",
+    "            <td style=\"border: 0px solid black; text-align: left; padding: 8px;\">Organization Name</td>\n",
+    "            <td style=\"border: 0px solid black; text-align: center; padding: 8px;\">chr</td>\n",
+    "            <td style=\"border: 0px solid black; text-align: left; padding: 8px;\">The name of the players’ school/organization</td>\n",
+    "        </tr>\n",
+    "    </table>\n",
+    "</body>\n",
+    "</html>\n"
    ]
   },
   {
@@ -77,37 +97,29 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "63815ebb-0a71-4ce3-a55a-48bca5ae4e37",
+   "metadata": {},
+   "source": [
+    "## <ins>Methods & Results</ins>\n",
+    "*   **Methods & Results**:\n",
+    "    *   describe the methods you used to perform your analysis from beginning to end that narrates the analysis code.\n",
+    "    *   your report should include code which:\n",
+    "        *   loads data  \n",
+    "        *   wrangles and cleans the data to the format necessary for the planned analysis\n",
+    "        *   performs a summary of the data set that is relevant for exploratory data analysis related to the planned analysis \n",
+    "        *   creates a visualization of the dataset that is relevant for exploratory data analysis related to the planned analysis\n",
+    "        *   performs the data analysis\n",
+    "        *   creates a visualization of the analysis \n",
+    "        *   _note: all figures should have a figure number and a legend_"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "id": "ca3f7e2b-216d-472e-a2b4-c3c79908c817",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "── \u001b[1mAttaching core tidyverse packages\u001b[22m ──────────────────────── tidyverse 2.0.0 ──\n",
-      "\u001b[32m✔\u001b[39m \u001b[34mdplyr    \u001b[39m 1.1.4     \u001b[32m✔\u001b[39m \u001b[34mreadr    \u001b[39m 2.1.5\n",
-      "\u001b[32m✔\u001b[39m \u001b[34mforcats  \u001b[39m 1.0.0     \u001b[32m✔\u001b[39m \u001b[34mstringr  \u001b[39m 1.5.1\n",
-      "\u001b[32m✔\u001b[39m \u001b[34mggplot2  \u001b[39m 3.5.1     \u001b[32m✔\u001b[39m \u001b[34mtibble   \u001b[39m 3.2.1\n",
-      "\u001b[32m✔\u001b[39m \u001b[34mlubridate\u001b[39m 1.9.3     \u001b[32m✔\u001b[39m \u001b[34mtidyr    \u001b[39m 1.3.1\n",
-      "\u001b[32m✔\u001b[39m \u001b[34mpurrr    \u001b[39m 1.0.2     \n",
-      "── \u001b[1mConflicts\u001b[22m ────────────────────────────────────────── tidyverse_conflicts() ──\n",
-      "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mfilter()\u001b[39m masks \u001b[34mstats\u001b[39m::filter()\n",
-      "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mlag()\u001b[39m    masks \u001b[34mstats\u001b[39m::lag()\n",
-      "\u001b[36mℹ\u001b[39m Use the conflicted package (\u001b[3m\u001b[34m<http://conflicted.r-lib.org/>\u001b[39m\u001b[23m) to force all conflicts to become errors\n",
-      "\n",
-      "Attaching package: ‘cowplot’\n",
-      "\n",
-      "\n",
-      "The following object is masked from ‘package:lubridate’:\n",
-      "\n",
-      "    stamp\n",
-      "\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "library(tidyverse)\n",
     "library(cowplot)"
@@ -115,10 +127,11 @@
   },
   {
    "cell_type": "markdown",
-   "id": "63815ebb-0a71-4ce3-a55a-48bca5ae4e37",
+   "id": "68dfa2b5-cc03-4368-ac57-b90d0e404a8a",
    "metadata": {},
    "source": [
-    "# Load the data"
+    "### (1) Load the Data\n",
+    "After examining that the data is of .csv files with the delimiter as a common (i.e. \",\"), we read in the data using the `read_csv()` as provided by `tidyverse` package using the URL given by the PLAICraft team."
    ]
   },
   {
@@ -255,7 +268,8 @@
    "id": "e2dd60e4-cc2d-4537-91cf-feb4516ca181",
    "metadata": {},
    "source": [
-    "# Data Wrangling"
+    "### (3) Data Wrangling\n",
+    "Upon the initial examination, it is clear that the columns/variables `individualID` and `organizationName` provide no information as all vallues of `NA` values. Similarly, the `experience`, `subscribe`, `hashedEmail` and `name` were also removed using the `select()` function as these variables have no values in the question of this paper."
    ]
   },
   {
@@ -401,7 +415,7 @@
    "id": "c8816795-615d-4a6a-9289-7653154a9530",
    "metadata": {},
    "source": [
-    "# Some Calculations (and Visualization)"
+    "### (4) Some Calculations (and Visualization)"
    ]
   },
   {
