--- a/minecraft_project.ipynb
+++ b/minecraft_project.ipynb
@@ -1942,7 +1942,7 @@
     }
    ],
    "source": [
-    "# Scatter plot of played hours vs age per person\n",
+    "# Scatter plot of played hours vs. age per person\n",
     "options(repr.plot.width = 16, repr.plot.height = 9)\n",
     "ggplot(mc_cleaned, aes(x = age, y = played_hours)) +\n",
     "    geom_point(alpha = 0.5) +\n",
