Added "Adjust range of neighbours" to To-Do List

--- a/minecraft_project.ipynb
+++ b/minecraft_project.ipynb
@@ -3480,6 +3480,8 @@
    "source": [
     "# To-Do\n",
     "\n",
+    "- [ ] ADJUST NUMBER OF NEIGHBOURS TO USE\n",
+    "\n",
     "**Victor**\n",
     "- [x] Re-do the introduction with the newer questions + describe the second data set\n",
     "- [x] Clean up the comments + make graph looks better + add in comment for codes readability \n",
