--- a/minecraft_project.ipynb
+++ b/minecraft_project.ipynb
@@ -3475,6 +3475,15 @@
   },
   {
    "cell_type": "markdown",
+   "id": "3a7f72bf-5024-4d2c-a949-78428e267caa",
+   "metadata": {},
+   "source": [
+    "Discussion (words)\n",
+    "As shown in the knn regression plot above, \"Total Playtime\" spikes as the \"Age of the Player\" is 17-20. This means that players between 17 and 20 (likely to be university students), are more likely to contribute more play hours than other age groups. This result is expected because it's common knowledge that younger people usually have more gaming experience than older people. Another reason is that most players in the data are under the age of 20, showing that younger people are more likely to show interest in the project than older people.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "47084641-6f91-47f1-b984-fa39ef3e9d16",
    "metadata": {},
    "source": [
