Added citations in introduction

--- a/minecraft_project.ipynb
+++ b/minecraft_project.ipynb
@@ -14,9 +14,9 @@
    "metadata": {},
    "source": [
     "## <ins>Introduction</ins> (459 words) \n",
-    "In recent years, artificial intelligence, particularly generative AI, has been evolving at a rapid pace, with even more significant growth anticipated in the future **cite** This as a result led to a widespread adoption of AI technologies across many domains and fields including healthcare, business and education **cite**. While AI can have many important benefits, many experts have weighed in on the potential misuse of AI, sparking safety and privacy concerns for users across the world **cite**. \n",
+    "In recent years, artificial intelligence, particularly generative AI, has been evolving at a rapid pace, with even more significant growth anticipated in the future (Tang et al., 2020). This as a result led to a widespread adoption of AI technologies across many domains and fields including healthcare, business and education (Rashid & Karim, 2024). While AI can have many important benefits, many experts have weighed in on the potential misuse of AI, sparking safety and privacy concerns for users across the world (El-Helaly, 2024; Khlaif et al., 2023; Rashid & Karim, 2024). \n",
     "\n",
-    "With this, the Pacific Laboratory for Artificial Intelligence (PLAI) at the University of British Columbia (UBC), is focused on research on embodied AI—artificial intelligence that can think, act, and learn similar to that of a human being **cite**. The group's mission focuses on the development of safe and reliable AI systems that foster human trust **cite**. To help achieve this goal, the team has presented two datasets [sessions.csv](https://drive.google.com/uc?export=download&id=14O91N5OlVkvdGxXNJUj5jIsV5RexhzbB) and [players.csv](https://drive.google.com/uc?export=download&id=1Mw9vW0hjTJwRWx0bDXiSpYsO3gKogaPz) and [sessions.csv](https://drive.google.com/uc?export=download&id=14O91N5OlVkvdGxXNJUj5jIsV5RexhzbB) that can be used to identify which “kind” of player are likely to contribute a greater volume of data. This inquiry will be the central focus of this report.\n",
+    "With this, the Pacific Laboratory for Artificial Intelligence (PLAI) at the University of British Columbia (UBC), is focused on research on embodied AI—artificial intelligence that can think, act, and learn similar to that of a human being (PLAICraft, 2024). The group's mission focuses on the development of safe and reliable AI systems that foster human trust (PLAICraft, 2024). To help achieve this goal, the team has presented two datasets [sessions.csv](https://drive.google.com/uc?export=download&id=14O91N5OlVkvdGxXNJUj5jIsV5RexhzbB) and [players.csv](https://drive.google.com/uc?export=download&id=1Mw9vW0hjTJwRWx0bDXiSpYsO3gKogaPz) and [sessions.csv](https://drive.google.com/uc?export=download&id=14O91N5OlVkvdGxXNJUj5jIsV5RexhzbB) that can be used to identify which “kind” of player are likely to contribute a greater volume of data. This inquiry will be the central focus of this report.\n",
     "\n",
     "The two datasets provided are [players.csv](https://drive.google.com/uc?export=download&id=1Mw9vW0hjTJwRWx0bDXiSpYsO3gKogaPz) and [sessions.csv](https://drive.google.com/uc?export=download&id=14O91N5OlVkvdGxXNJUj5jIsV5RexhzbB) (as mentioned). The `sessions.csv` dataset includes players’ hashed email, the [actual] start and end time in the format of date and 24-hour time, and the original start and end time of the sessions in UNIX format. Further, sessions.csv does not contain any anomalies. However, the dataset being used in this study is derived from `players.csv` because this is the only dataset that contains two variables related to the research questions, `Age` and `Total Playtimes`. This dataset contains a total of 196 observations and nine variables. These variables are listed and described in the table below:"
    ]
@@ -117,28 +117,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 46,
    "id": "ca3f7e2b-216d-472e-a2b4-c3c79908c817",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ERROR",
-     "evalue": "Error in library(ggtext): there is no package called ‘ggtext’\n",
-     "output_type": "error",
-     "traceback": [
-      "Error in library(ggtext): there is no package called ‘ggtext’\nTraceback:\n",
-      "1. library(ggtext)"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Loading the appropriate libraries\n",
     "library(repr)\n",
     "library(tidyverse)\n",
     "library(tidymodels)\n",
     "library(cowplot)\n",
-    "library(ggplot2)\n",
-    "library(ggtext) # for Figure titles"
+    "library(ggplot2)"
    ]
   },
   {
