Fixed References section

--- a/minecraft_project.ipynb
+++ b/minecraft_project.ipynb
@@ -4010,13 +4010,16 @@
    "metadata": {},
    "source": [
     "## References\n",
-    "- Alonso-Fernández, C., Calvo-Morata, A., Freire, M., Iván Martínez-Ortiz, & Baltasar Fernández-Manjón. (2019). Applications of data science to game learning analytics data: A systematic literature review. Computers & Education, 141, 103612. <https://doi.org/10.1016/j.compedu.2019.103612> \n",
     "\n",
-    "- Johannes, N., Vuorre, M., & Przybylski, A. K. (2021). Video game play is positively correlated with well-being. Royal Society Open Science, 8(2), 202049. https://doi.org/10.1098/rsos.202049\n",
+    "- El-Helaly, M. (2024). Artificial Intelligence and occupational health and safety, benefits and drawbacks. PubMed, 115(2), e2024014–e2024014. https://doi.org/10.23749/mdl.v115i2.15835\n",
+    "   \n",
+    "- Khlaif, Z. N., Mousa, A., Hattab, M. K., Itmazi, J., Hassan, A. A., Sanmugam, M., & Ayyoub, A. (2023). The potential and concerns of using AI in scientific research: ChatGPT performance evaluation. JMIR Medical Education, 9, e47049. https://doi.org/10.2196/47049 \n",
     "\n",
-    "- Jordan, T., & Dhamala, M. (2022). Video game players have improved decision-making abilities and enhanced brain activities. Neuroimage: Reports, 2(3), 100112. <https://doi.org/10.1016/j.ynirp.2022.100112> \n",
+    "- PLAICraft. (2024). Plaicraft.ai. https://www.plaicraft.ai/ \n",
     "\n",
-    "- Petri, G., & Gresse, C. (2017). How games for computing education are evaluated? A systematic literature review. Computers & Education, 107, 68--90. <https://doi.org/10.1016/j.compedu.2017.01.004>"
+    "- Rashid, A. B., & Karim, A. (2024). AI revolutionizing industries worldwide: A comprehensive overview of its diverse applications. Hybrid Advances, 7, 100277–100277. https://doi.org/10.1016/j.hybadv.2024.100277 \n",
+    "\n",
+    "- Tang, X., Li, X., Ding, Y., Song, M., & Bu, Y. (2020). The pace of artificial intelligence innovations: Speed, talent, and trial-and-error. Journal of Informetrics, 14(4), 101094–101094. https://doi.org/10.1016/j.joi.2020.101094 "
    ]
   }
  ],
