Fixed introduction's table formatting

--- a/minecraft_project.ipynb
+++ b/minecraft_project.ipynb
@@ -31,7 +31,7 @@
     "<body>\n",
     "    <table style=\"border-collapse: collapse; width: 40%; margin: auto auto; table-layout: auto; border: 0px solid black;\">\n",
     "        <caption style=\"font-size: 1.1em; font-weight: bold; margin-bottom: 5px; text-align: center;\">\n",
-    "            Table 1. The Name, Data Type, and Meaning of Variables In players.csv\n",
+    "            Table 1: The Name, Data Type, and Meaning of Variables in <code>players.csv</code>\n",
     "        </caption>\n",
     "        <tr>\n",
     "            <th style=\"border: 0px solid black; text-align: center; padding: 10px;\">Name</th>\n",
@@ -40,47 +40,47 @@
     "        </tr>\n",
     "        <tr style=\"border: 0px solid black;\">\n",
     "            <td style=\"border: 0px solid black; text-align: left; padding: 8px;\">Experience</td>\n",
-    "            <td style=\"border: 0px solid black; text-align: center; padding: 8px;\">chr</td>\n",
+    "            <td style=\"border: 0px solid black; text-align: center; padding: 8px;\"><code>chr</code></td>\n",
     "            <td style=\"border: 0px solid black; text-align: left; padding: 8px;\">Self-evaluated experience with Minecraft</td>\n",
     "        </tr>\n",
     "        <tr style=\"border: 0px solid black;\">\n",
     "            <td style=\"border: 0px solid black; text-align: left; padding: 8px;\">Subscribe</td>\n",
-    "            <td style=\"border: 0px solid black; text-align: center; padding: 8px;\">lgl</td>\n",
+    "            <td style=\"border: 0px solid black; text-align: center; padding: 8px;\"><code>lgl</code></td>\n",
     "            <td style=\"border: 0px solid black; text-align: left; padding: 8px;\">Declarations to receive email updates</td>\n",
     "        </tr>\n",
     "        <tr style=\"border: 0px solid black;\">\n",
     "            <td style=\"border: 0px solid black; text-align: left; padding: 8px;\">Hashed Email</td>\n",
-    "            <td style=\"border: 0px solid black; text-align: center; padding: 8px;\">chr</td>\n",
+    "            <td style=\"border: 0px solid black; text-align: center; padding: 8px;\"><code>chr</code></td>\n",
     "            <td style=\"border: 0px solid black; text-align: left; padding: 8px;\">Encrypted email via Hash</td>\n",
     "        </tr>\n",
     "        <tr style=\"border: 0px solid black;\">\n",
     "            <td style=\"border: 0px solid black; text-align: left; padding: 8px;\">Played Hours</td>\n",
-    "            <td style=\"border: 0px solid black; text-align: center; padding: 8px;\">dbl</td>\n",
+    "            <td style=\"border: 0px solid black; text-align: center; padding: 8px;\"><code>dbl</code></td>\n",
     "            <td style=\"border: 0px solid black; text-align: left; padding: 8px;\">Total played hours</td>\n",
     "        </tr>\n",
     "        <tr style=\"border: 0px solid black;\">\n",
     "            <td style=\"border: 0px solid black; text-align: left; padding: 8px;\">Name</td>\n",
-    "            <td style=\"border: 0px solid black; text-align: center; padding: 8px;\">chr</td>\n",
+    "            <td style=\"border: 0px solid black; text-align: center; padding: 8px;\"><code>chr</code></td>\n",
     "            <td style=\"border: 0px solid black; text-align: left; padding: 8px;\">A fake name used in-game</td>\n",
     "        </tr>\n",
     "        <tr style=\"border: 0px solid black;\">\n",
     "            <td style=\"border: 0px solid black; text-align: left; padding: 8px;\">Gender</td>\n",
-    "            <td style=\"border: 0px solid black; text-align: center; padding: 8px;\">chr</td>\n",
+    "            <td style=\"border: 0px solid black; text-align: center; padding: 8px;\"><code>chr</code></td>\n",
     "            <td style=\"border: 0px solid black; text-align: left; padding: 8px;\">Gender of players</td>\n",
     "        </tr>\n",
     "        <tr style=\"border: 0px solid black;\">\n",
     "            <td style=\"border: 0px solid black; text-align: left; padding: 8px;\">Age</td>\n",
-    "            <td style=\"border: 0px solid black; text-align: center; padding: 8px;\">dbl</td>\n",
+    "            <td style=\"border: 0px solid black; text-align: center; padding: 8px;\"><code>dbl</code></td>\n",
     "            <td style=\"border: 0px solid black; text-align: left; padding: 8px;\">Age of players</td>\n",
     "        </tr>\n",
     "        <tr style=\"border: 0px solid black;\">\n",
     "            <td style=\"border: 0px solid black; text-align: left; padding: 8px;\">Individual ID</td>\n",
-    "            <td style=\"border: 0px solid black; text-align: center; padding: 8px;\">chr</td>\n",
+    "            <td style=\"border: 0px solid black; text-align: center; padding: 8px;\"><code>chr</code></td>\n",
     "            <td style=\"border: 0px solid black; text-align: left; padding: 8px;\">The player's ID in-game</td>\n",
     "        </tr>\n",
     "        <tr style=\"border: 0px solid black;\">\n",
     "            <td style=\"border: 0px solid black; text-align: left; padding: 8px;\">Organization Name</td>\n",
-    "            <td style=\"border: 0px solid black; text-align: center; padding: 8px;\">chr</td>\n",
+    "            <td style=\"border: 0px solid black; text-align: center; padding: 8px;\"><code>chr</code></td>\n",
     "            <td style=\"border: 0px solid black; text-align: left; padding: 8px;\">The name of the players’ school/organization</td>\n",
     "        </tr>\n",
     "    </table>\n",
