Deleted plus/minus sign in RMSPE

--- a/minecraft_project.ipynb
+++ b/minecraft_project.ipynb
@@ -4117,7 +4117,7 @@
    "id": "8776d408-c692-48a3-9c03-3ef3318dcdac",
    "metadata": {},
    "source": [
-    "The average root-mean-squared predicted error of the predicted playtime and the actual playtime is approximately **±38.26 hours**."
+    "The average root-mean-squared predicted error of the predicted playtime and the actual playtime is approximately **38.26 hours**."
    ]
   },
   {
