--- a/minecraft_project.ipynb
+++ b/minecraft_project.ipynb
@@ -4136,7 +4136,16 @@
    "metadata": {},
    "source": [
     "Discussion (words)\n",
-    "As shown in the knn regression plot above, \"Total Playtime\" spikes as the \"Age of the Player\" is 17-20. This means that players between 17 and 20 (likely to be university students), are more likely to contribute more play hours than other age groups. This result is expected because it's common knowledge that younger people usually have more gaming experience than older people. Another reason is that most players in the data are under the age of 20, showing that younger people are more likely to show interest in the project than older people.\n"
+    "\n",
+    "Result:\n",
+    "As shown in the knn regression plot above, \"Total Playtime\" spikes as the \"Age of the Player\" is 17-20. This means that players between 17 and 20 (likely to be university students), are more likely to contribute more play hours than other age groups. This result is expected because it's common knowledge that younger people usually have more gaming experience than older people. Another reason is that most players in the data are under the age of 20, showing that younger people are more likely to show interest in the project than older people. \n",
+    "Error: \n",
+    "The calculated average root-mean-squared predicted error in the analysis is 38.26 hours. This error is quite large, as compared to the variability between most play hours is less than a few hours. One potential cause of this error could be the existing outliers in the data. A small amount of the players has significantly more playtime than other players (players have an average of around 5.85 hours of playtime, but a few players have hundreds of hours). \n",
+    "Impact:\n",
+    "Our research shows that players between 17 and 20 are likely to have more play hours than other ages. Therefore, this suggests that players in this age group should be targeted in their future research. Since most of these players are likely to be university students, promotions such as posters and social media posts could be implemented in the university.\n",
+    "Further discussion:\n",
+    "Our research shows that younger people play more Minecraft than older people. Some further discussion, such as the motivation behind this behavior, could be discovered in future research.\n",
+    "\n"
    ]
   },
   {
