Added outliers to To-Do List

--- a/minecraft_project.ipynb
+++ b/minecraft_project.ipynb
@@ -3955,6 +3955,7 @@
     "- [x] Fix the Figure titles\n",
     "- [x] Find articles to cite + redo references\n",
     "- [ ] Explain sessions.csv\n",
+    "- [ ] Explain why we removed / didn't remove outliers\n",
     "\n",
     "**Andy**\n",
     "- [x] Methods & Results: (the rest bullet of points)\n",
@@ -3967,6 +3968,14 @@
     "**Danny**\n",
     "- [ ] Discussion"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6ef62430-8b41-4565-a383-41672e581d5b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
